# Arcade-Learning-Environment

./: .gitignore  CMakeLists.txt  Dockerfile
AFL/: Makefile  afl-fuzz.c  fake-forkserver-test.c
fuzzable-sim/: .gitignore  CMakeLists.txt  README.md  clean.sh  fuzzableCommon.h  fuzzableSim.cpp  games.txt  joinVideo.sh  makeAll.sh  queues2Video.sh  recordVideo.cpp  romPath.sh  runDocker.sh  runRecordVideo.sh  runWithAFL.sh  runWithAFLMulti.sh
src/: CMakeLists.txt  ale_afl.hpp  ale_interface.cpp  ale_interface.hpp
src/common/: ScreenSDL.cpp
src/emucore/: M6502.hxx  M6502.m4  M6502Hi.cxx  M6502Hi.ins  M6502Low.cxx  M6502Low.ins
